--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.0",
         "predis/predis": "^1.1",
         "symfony/process": "^5.0"
     },
